<resources>
    <string name="app_name">Demo Chat</string>

    <string name="lbl_user">Email</string>
    <string name="lbl_pass">Password</string>
    <string name="lbl_new_account">Do not have an account?</string>
    <string name="btn_signin">Signin here</string>

    <string name="lbl_create_user">Fill the information to create a new account</string>
    <string name="lbl_user_name">Name</string>
    <string name="lbl_new_avatar">Tap to generate user avatar</string>
    <string name="btn_background">Generate background color</string>
    <string name="btn_create_user">Create user</string>
    <string name="lbl_go_login">Already have an account?</string>

    <string name="nav_header_title">Chat app demo</string>
    <string name="nav_header_subtitle">geancarlo@github.com</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="btn_login">Login</string>
    <string name="btn_add_channel">Add channel</string>

    <string name="lbl_login">Please create account or login to continue</string>
    <string name="hint_message">Message</string>

    <string name="lbl_add_channel_title">Add channel</string>
    <string name="lbl_add_channel_name">Channel name</string>
    <string name="lbl_add_channel_description">Channel description</string>
</resources>